@@ -18,7 +18,6 @@ namespace CastleTests
 	using Castle.MicroKernel.Registration;
 	using Castle.Windsor;
 	using Castle.Windsor.Configuration.Interpreters;
-	using Castle.Windsor.Tests;
 
 	using CastleTests.Components;
 
