@@ -12,13 +12,11 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-namespace Castle
+namespace CastleTests
 {
 	using Castle.ClassComponents;
 	using Castle.Core.Internal;
 	using Castle.MicroKernel.Tests.ClassComponents;
-	using Castle.Windsor.Tests;
-	using Castle.Windsor.Tests.ClassComponents;
 
 	using CastleTests.Components;
 
